--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "description": "",
   "dependencies": {
+    "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
   },
   "scripts": {
     "start": "webpack serve --open",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "biome": "biome check --write src",
+    "format": "prettier --write ."
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "@biomejs/biome": "1.9.2",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
@@ -23,6 +27,8 @@
     "html-webpack-plugin": "^5.6.0",
     "postcss": "^8.4.47",
     "postcss-loader": "^8.1.1",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2",
