--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "webpack serve --open",
     "build": "webpack --mode production",
     "biome": "biome check --write src",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -21,16 +23,25 @@
     "@biomejs/biome": "1.9.2",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.13",
+    "babel-jest": "^29.7.0",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-transform-stub": "^2.0.0",
+    "jest-watch-typeahead": "^2.2.2",
     "postcss": "^8.4.47",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "style-loader": "^4.0.0",
+    "ts-jest": "^29.2.5",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2",
     "webpack": "^5.94.0",
